Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8264895

[lworld] assert(!InstanceKlass::cast(receiver_klass)->is_not_initialized()) failed: receiver_klass must be initialized

XMLWordPrintable

      The converted TestLWorld.java test fails with the new IR framework with the assertion below.

      To reproduce:
      - Checkout the latest state of the IR Framework: https://github.com/chhagedorn/valhalla/tree/TestingFramework, (current latest commit hash: 3def454dca0e8606a3a233dab4b9a55bd377acbd)
      - Run: JTreg test compiler/valhalla/inlinetypes/TestLWorld.java with --javaoptions:"-DScenarios=0 -DFlipC1C2=true"

      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/sharedRuntime.cpp:1230
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/mach5/mesos/work_dir/slaves/28992c6d-c35d-42fa-8099-898223bf183b-S1635/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/311aa10e-9e8e-4203-8b08-898b01d85a36/runs/543bd0b9-4df0-43ed-bd21-f4ecfa089ad0/workspace/open/src/hotspot/share/runtime/sharedRuntime.cpp:1230), pid=111657, tid=111660
      # assert(!InstanceKlass::cast(receiver_klass)->is_not_initialized()) failed: receiver_klass must be initialized
      #
      # JRE version: Java(TM) SE Runtime Environment (17.0+1) (fastdebug build 17-valhalla+1-43)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17-valhalla+1-43, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x1784e0d] SharedRuntime::find_callee_info_helper(JavaThread*, vframeStream&, Bytecodes::Code&, CallInfo&, Thread*)+0x4cd
      ............
      Command Line: -Djava.library.path=. -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -DScenarios=0 -DFlipC1C2=true -XX:-UseACmpProfile -XX:+AlwaysIncrementalInline -XX:FlatArrayElementMaxOops=5 -XX:FlatArrayElementMaxSize=-1 -XX:-UseArrayLoadStoreProfile -XX:InlineFieldMaxFlatSize=-1 -XX:+InlineTypePassFieldsAsArgs -XX:+InlineTypeReturnedAsFields -XX:-BackgroundCompilation -XX:CompileCommand=quiet -XX:+PrintCompilation -XX:+UnlockDiagnosticVMOptions -XX:+LogCompilation -XX:CompileCommand=log,compiler.valhalla.inlinetypes.TestLWorld::* -XX:CompileCommand=option,compiler.valhalla.inlinetypes.TestLWorld::*,bool,PrintIdeal,true -XX:CompileCommand=option,compiler.valhalla.inlinetypes.TestLWorld::*,bool,PrintOptoAssembly,true -XX:-OmitStackTraceInFastThrow -DShouldDoIRVerification=true -DWarmup=251 -Dir.framework.server.port=37737 jdk.test.lib.hotspot.ir_framework.TestFrameworkExecution compiler.valhalla.inlinetypes.TestLWorld compiler.valhalla.inlinetypes.MyValue1 compiler.valhalla.inlinetypes.MyValue2 compiler.valhalla.inlinetypes.MyValue2Inline compiler.valhalla.inlinetypes.MyValue3 compiler.valhalla.inlinetypes.MyValue3Inline
      .............
      Stack: [0x00007fb48f4e9000,0x00007fb48f5ea000], sp=0x00007fb48f5e3790, free space=1001k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1784e0d] SharedRuntime::find_callee_info_helper(JavaThread*, vframeStream&, Bytecodes::Code&, CallInfo&, Thread*)+0x4cd
      V [libjvm.so+0x17860eb] SharedRuntime::resolve_sub_helper(JavaThread*, bool, bool, bool*, Thread*)+0x1ab
      V [libjvm.so+0x1786713] SharedRuntime::resolve_helper(JavaThread*, bool, bool, bool*, Thread*)+0x53
      V [libjvm.so+0x178712e] SharedRuntime::resolve_opt_virtual_call_C(JavaThread*)+0x12e
      v ~RuntimeStub::resolve_opt_virtual_call
      J 1461 c1 compiler.valhalla.inlinetypes.TestLWorld.test72()I (9 bytes) @ 0x00007fb4793f729c [0x00007fb4793f7260+0x000000000000003c]
      j compiler.valhalla.inlinetypes.TestLWorld.test72_verifier()V+1
      v ~StubRoutines::call_stub
      V [libjvm.so+0xed2c09] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x4e9
      V [libjvm.so+0x17060e5] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*) [clone .constprop.0]+0xf35
      V [libjvm.so+0x1707357] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x237
      V [libjvm.so+0x1067ebc] JVM_InvokeMethod+0x24c
      J 1248 jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base@17-valhalla (0 bytes) @ 0x00007fb47935fa04 [0x00007fb47935f8e0+0x0000000000000124]
      J 1247 c1 jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base@17-valhalla (150 bytes) @ 0x00007fb472035ccc [0x00007fb472034e00+0x0000000000000ecc]
      J 1191 c2 jdk.test.lib.hotspot.ir_framework.CustomRunTest.invokeTest()V (76 bytes) @ 0x00007fb47934a330 [0x00007fb47934a1c0+0x0000000000000170]
      J 1402 c2 jdk.test.lib.hotspot.ir_framework.AbstractTest.run()V (45 bytes) @ 0x00007fb4793e25d4 [0x00007fb4793e2280+0x0000000000000354]
      j jdk.test.lib.hotspot.ir_framework.CustomRunTest.run()V+59
      j jdk.test.lib.hotspot.ir_framework.TestFrameworkExecution.runTests()V+135
      j jdk.test.lib.hotspot.ir_framework.TestFrameworkExecution.start()V+9
      j jdk.test.lib.hotspot.ir_framework.TestFrameworkExecution.main([Ljava/lang/String;)V+38
      v ~StubRoutines::call_stub
      V [libjvm.so+0xed2c09] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x4e9
      V [libjvm.so+0x1010de9] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, Thread*) [clone .constprop.1]+0x369
      V [libjvm.so+0x10153a5] jni_CallStaticVoidMethod+0x1c5
      C [libjli.so+0x47d4] JavaMain+0xd34
      C [libjli.so+0x7db9] ThreadJavaMain+0x9

      Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
      v ~RuntimeStub::resolve_opt_virtual_call
      J 1461 c1 compiler.valhalla.inlinetypes.TestLWorld.test72()I (9 bytes) @ 0x00007fb4793f729c [0x00007fb4793f7260+0x000000000000003c]
      j compiler.valhalla.inlinetypes.TestLWorld.test72_verifier()V+1
      v ~StubRoutines::call_stub
      J 1248 jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base@17-valhalla (0 bytes) @ 0x00007fb47935f98b [0x00007fb47935f8e0+0x00000000000000ab]
      J 1247 c1 jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base@17-valhalla (150 bytes) @ 0x00007fb472035ccc [0x00007fb472034e00+0x0000000000000ecc]
      J 1191 c2 jdk.test.lib.hotspot.ir_framework.CustomRunTest.invokeTest()V (76 bytes) @ 0x00007fb47934a330 [0x00007fb47934a1c0+0x0000000000000170]
      J 1402 c2 jdk.test.lib.hotspot.ir_framework.AbstractTest.run()V (45 bytes) @ 0x00007fb4793e25d4 [0x00007fb4793e2280+0x0000000000000354]
      j jdk.test.lib.hotspot.ir_framework.CustomRunTest.run()V+59
      j jdk.test.lib.hotspot.ir_framework.TestFrameworkExecution.runTests()V+135
      j jdk.test.lib.hotspot.ir_framework.TestFrameworkExecution.start()V+9
      j jdk.test.lib.hotspot.ir_framework.TestFrameworkExecution.main([Ljava/lang/String;)V+38
      v ~StubRoutines::call_stub

            thartmann Tobias Hartmann
            chagedorn Christian Hagedorn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: